jinja-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jinja-ingress
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
  rules:
    - host: pyronaid-dashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jinja-service-ext
                port:
                  number: 5001
